Transitioned from Plan to Build mode
